css/site.css
html {
   font-size: 26px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   /*margin-left: 1rem;
   margin-right: 1rem;*/
   width: 100%;
   min-width: fit-content;
}
body {
   width: 100%;
   max-width: 1080px;
   margin: auto;
   background-color: rgb(255, 255, 255);
}
header {
   background-color: #000;
   text-align: left;
   /*padding: 0.5rem;
   padding-top: 0;*/
   width: 100%;
   /*display: flow-root;*/
   /*margin-left: -1rem;
   margin-right: -1rem;*/
}
main {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
}
h1 {
   margin: 0;
   font-size: 2.5rem;
   letter-spacing: 0.1rem;
   color: #00C2CB;
   text-align: center;
}
nav {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   text-align: center;
}
nav a {
   display: inline-block;
   width: 7rem;
   text-align: center;
   border-style: solid;
   border-width: 0.125rem;
   border-color: rgb(58, 58, 58);
   background-color: rgb(22, 22, 22);
   padding: 0.35rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   margin-top: 0.5rem;
   color: #00C2CB;
   text-decoration: none;
   font-weight: bold;
   font-size: 0.75rem;
}
nav a:visited {
   color: #00C2CB;
}
nav a:hover {
   color: #00f2ff;
}
nav a:active {
   color: #00f2ff;
}
/*a {
   text-decoration: none;
}*/
h2 {
   font-size: 1.5rem;
   display: inline;
   letter-spacing: 0.08rem;
}
h3 {
   margin-bottom: 0;
}
p {
   margin-top: 0.5rem;
}
a {
   color: #006c72;
}
a:hover {
   color: #00bbc5;
}
a:active {
   color: #00f2ff;
}
/*a:visited {
   color: #3e5052;
}*/
section {
   margin-top: 1rem;
}
#resourcefulLogo {
   width: 30%;
   float: right;
   padding-right: 0.75rem;
   min-width: 200px;
}
.roman_numeral {
   font-family: Georgia, 'Times New Roman', Times, serif;
}
.subtle {
   font-size: 0.8rem;
   font-style: italic;
}
#questionsIndex {
   line-height: 1.8rem;
   list-style-type: square;
}
#questionsIndex a {
   text-transform: capitalize;
}
.question {
   text-transform: capitalize;
   list-style: none;
}
#questionsList {
   padding-left: 40px;
}
#questionsList li {
   list-style: square;
}
.answer {
   padding-left: 40px;
}
.socialLink {
   margin-top: -20px;
}
.socialLink a {
   font-size: 1rem;
   text-decoration: none;
}
.socialLink i {
   display: inline-block;
   vertical-align: middle;
}
.socialLink span {
   text-decoration: underline;
}
.iconLink:hover .fa-kickstarter {
   color: #05CE78c0;
}
.iconLink:hover .fa-discord {
   color: #7289DAc0;
}
footer a, footer p, footer div {
   display: inline;
}
footer a {
   display: inline-block;
   width: 85px;
}
footer {
   text-align: center;
   border-top: 0.1rem solid #000;
   border-bottom: 0.1rem solid #000;
   margin-bottom: 1rem;
}
footer p {
   font-size: 0.9rem;
   font-style: italic;
   font-weight: bold;
   color: #000;
}
.fab {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
}
.fa-youtube {
   color: #FF0000;
}
.fa-youtube:hover {
   color: #ff0000c0;
}
.fa-facebook {
   color: #4267B2;
}
.fa-facebook:hover {
   color: #4267B2c0;
}
.fa-twitter {
   color: #1DA1F2;
}
.fa-twitter:hover {
   color: #1DA1F2c0;
}
.fa-itch-io {
   color: #FA5C5C;
}
.fa-itch-io:hover {
   color: #FA5C5Cc0;
}
.fa-discord {
   color: #7289DA;
}
.fa-discord:hover {
   color: #7289DAc0;
}
.fa-kickstarter {
   color: #05CE78;
}
.fa-kickstarter:hover {
   color: #05CE78c0;
}
@media (max-width:480px) {
   #resourcefulLogo {
      width: 100%;
      /*height: 100%;*/
      float: none;
      display: block;
      margin-left: auto;
      margin-right: auto;
      max-width: 350px;
   }
}
@media (max-width:315px) {
   h1 {
      font-size: 1.5rem;
   }
   nav a {
      width: 5rem;
   }
   h2 {
      font-size: 1.25rem;
   }
}

